improved layout. added functionality to load book images and efficiently render by page.

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,7 @@ tokenizers==0.13.3
 matplotlib==3.7.2
 seaborn==0.12.2
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0-py3-none-any.whl
+Flask==3.0.0
+Flask-Cors==4.0.0
+SQLAlchemy==2.0.25
+flask_sqlalchemy==3.1.1
